# starlette

./: .gitignore  404.html  CITATION.cff  LICENSE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 1-issue.md  config.yml
.github/workflows/: main.yml  publish.yml  test-suite.yml
applications/: index.html
authentication/: index.html
background/: index.html
config/: index.html
contributing/: index.html
database/: index.html
docs/: config.md  contributing.md  database.md  exceptions.md  index.md  lifespan.md  middleware.md  release-notes.md  sponsorship.md  templates.md  third-party-packages.md
docs/css/: custom.css
docs/js/: custom.js
docs/overrides/: main.html
endpoints/: index.html
events/: index.html
exceptions/: index.html
graphql/: index.html
middleware/: index.html
release-notes/: index.html
requests/: index.html
responses/: index.html
routing/: index.html
schemas/: index.html
scripts/: README.md  build  check  coverage  docs  install  lint  publish  sync-version  test
search/: search_index.json
server-push/: index.html
starlette/: applications.py  requests.py  responses.py  routing.py  templating.py
staticfiles/: index.html
templates/: index.html
testclient/: index.html
tests/: test_applications.py  test_authentication.py  test_config.py  test_requests.py  test_responses.py  test_routing.py  test_staticfiles.py  test_status.py  test_templates.py  test_testclient.py
tests/middleware/: test_base.py  test_cors.py  test_wsgi.py
third-party-packages/: index.html
websockets/: index.html
